syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.cpdss.common.generated";

message ResponseStatus {
	string status = 1;
	string message = 2;
	string code = 3;
	int32 httpStatusCode = 4;
}

enum PLANNING_TYPE {
		VALUE_A = 0;
		LOADABLE_STUDY = 1;
		DISCHARGE_STUDY = 2;
}